Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-136009

Wayland: QGuiApplication::setOverrideCursor doesn't work when app is freezed

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.10.0 Beta2, 6.11.0 FF
    • 6.9.0
    • QPA: Wayland
    • None
    • kwin_wayland
    • Linux/Wayland
    • eab533a92 (dev), 7eb0b0984 (6.10)

    Description

      1. Run attached software OverrideCursorTest.tar.gz
      2. Press the button (by keyboard or mouse, but don't move the mouse cursor)

      Result: Mouse cursor is not changed to WaitCursor. It's changed when mouse cursor moves and it's reset when mouse cursor leaves the window and goes back while the app is freezed.

       

      The example usage of " QGuiApplication::setOverrideCursor()" from documentation doesn't work.

       

      Maybe it's related to https://bugreports.qt.io/browse/QTBUG-75919

      Attachments

        1. OverrideCursorTest.tar.gz
          0.6 kB
          Błażej Szczygieł
        2. QTBUG-136009-v1.diff
          0.6 kB
          Błażej Szczygieł
        For Gerrit Dashboard: QTBUG-136009
        # Subject Branch Project Status CR V

        Activity

          People

            zaps166 Błażej Szczygieł
            zaps166 Błażej Szczygieł
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes