wayland cursor: flush requests when cursor is changed

Fixes: QTBUG-136009
Change-Id: I9daaf1786ba2c256343020a83b1d2e0a93749e62
Reviewed-by: David Edmundson <davidedmundson@kde.org>
(cherry picked from commit eab533a92bb3eb2b511eace76365896058248dcf)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>